--- a/MIST143_Traveler/Views/CustomerCenter/ProductManage.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/ProductManage.cshtml
@@ -75,17 +75,17 @@
                         <div>
                             <div class="text-center">
                                 <img src="https://res.klook.com/image/upload/v1645521732/tuv7ipnsnwwp5sa8sbjg.gif" width="260" height="180" alt="">
-                                <h4 class="還沒下單">還沒下單?</h4>
-                                <div class="找不到靈感">找不到靈感?不妨看看下方精選推薦！</div>
+                                <h4 class="還沒下單">還沒下單</h4>
+                                <div class="找不到靈感">找不到靈感?</div>
                             </div>
 
                         </div>
-                        <div>
-                            <h3 class="人氣推薦">人氣推薦 </h3>
-                            <div class="等兆倫的跑馬燈">
-
-
-                            </div>
+                        <div class="按鈕間隔">
+                            <a href="@Url.ActionLink("ProductListPage","ProductListPage2")" type="button" class="btn btn-warning 按鈕顏色">
+                                <span>
+                                    去逛逛
+                                </span>
+                            </a>
                         </div>
 
                     </div>
