--- a/MIST143_Traveler/Views/Home/ContactCenter.cshtml
+++ b/MIST143_Traveler/Views/Home/ContactCenter.cshtml
@@ -162,7 +162,7 @@
                      aria-labelledby="flush-headingOne"
                      data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
-                        <p>只要擁有10積分以上，即可於任一筆訂單的付款頁面使用並立享現金折抵。積分越多，折抵越多！  付款時記得使用積分哦！</p>
+                        <p>即可於任一筆訂單的付款頁面使用並立享現金折抵。積分越多，折抵越多！  付款時記得使用積分哦！</p>
                     </div>
                 </div>
             </div>
