--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -98,11 +98,11 @@
                                 if (v.PhotoPath != null)
                                 {
 
-                                    <img src="~/Images/客戶大頭貼/@v.PhotoPath" style="width: 30px; height: 30px; border-radius: 50%" id="smimg" /><span id="Cname">@v.MemberName</span>
+                                    <img src="~/Images/客戶大頭貼/@v.PhotoPath" style="width: 30px; height: 30px; border-radius: 50%" id="smimg" class="avatarShow" /><span id="Cname">@v.MemberName</span>
                                 }
                                 else
                                 {
-                                    <img src="~/Images/contact/300.png" id="avatarShow" style="width:30px;height:30px;border-radius:50%" />@v.MemberName
+                                    <img src="~/Images/contact/300.png" id="avatarShow" style="width:30px;height:30px;border-radius:50%" class="avatarShow" />@v.MemberName
                                 }
                             }
 
