--- a/MIST143_Traveler/Views/Home/CouponHome.cshtml
+++ b/MIST143_Traveler/Views/Home/CouponHome.cshtml
@@ -12,6 +12,14 @@
 
 
 <body>
+    <div class="contain col-12 cpage row align-items-center" style="width:100%;height:350px">
+        <h1 class="display-4 d-flex justify-content-center">
+            優惠專區
+        </h1>
+
+    </div>
+
+
     <div class="container col-12 d-flex">
         <div class="col-6 lef">
 
@@ -30,42 +38,34 @@
                 {
                     if (Model.已領過.Any(a => a.CouponId == co.CouponId))
                     {
-                        //Coupon.Add($@"<div class='coupon coupon - wave - left coupon - yellow'>
-                        //     <div class='coupon-info coupon-hole coupon-info-right-dashed'>
-                        //    <div class='coupon-store'>{co.CouponName}</div>  
-                        //<div class='coupon-price'>¥5.00</div>
-                        //<div class='coupon-desc'>5元优惠券满50.00元使用</div>
-                        //<div class='coupon-expiry-date'>有效期：2019.10.01-2019.10.30</div>
-                        //</div>
-                        //<div class='coupon-get coupon-get-already'></div>
-                        //</div>");
+                        
                         Coupon.Add($@"<div class='coupon coupon-wave-left coupon-wave-right coupon-yellow-gradient'>
-                                                            <div class='coupon-info coupon-info-right-dashed'>
-                                                                <div class='coupon-store'>{co.CouponName}</div>
-                                                                <div class='coupon-price'>折扣{(int)co.Discount}<span>優惠券</span></div>
-                                                                <div class='coupon-description'>訂單限滿{co.Condition}使用</div>
-                                                            </div>
-                                                            <div class='coupon-get' type='button' onclick='getcoupon({co.CouponId})'>
-                                                               
-                                                                <div class='coupon-get coupon-get-already'>123456</div>
-                                                            </div>
-                                                        </div>");
+                                        <div class='coupon-info coupon-info-right-dashed'>
+                                            <div class='coupon-store'>{co.CouponName}</div>
+                                            <div class='coupon-price'>折扣{(int)co.Discount}<span>優惠券</span></div>
+                                            <div class='coupon-description'>訂單限滿{co.Condition}使用</div>
+                                        </div>
+                                        <div class='coupon-get' type='button' onclick='getcoupon({co.CouponId})'>
+
+                                            <div class='coupon-get coupon-desc'>已領取</div>
+                                        </div>
+                                    </div>");
 
 
                     }
                     else
                     {
                         Coupon.Add($@"<div class='coupon coupon-wave-left coupon-wave-right coupon-yellow-gradient'>
-                                                            <div class='coupon-info coupon-info-right-dashed'>
-                                                                <div class='coupon-store'>{co.CouponName}</div>
-                                                                <div class='coupon-price'>折扣{(int)co.Discount}<span>優惠券</span></div>
-                                                                <div class='coupon-description'>訂單限滿{co.Condition}使用</div>
-                                                            </div>
-                                                            <div class='coupon-get' type='button' onclick='getcoupon({co.CouponId})'>
-                                                                <div class='coupon-desc'>副券</div>
-                                                                <div class='coupon-expiry-date'>到期日{co.ExDate}</div>
-                                                            </div>
-                                                        </div>");
+                                                                <div class='coupon-info coupon-info-right-dashed'>
+                                                                    <div class='coupon-store'>{co.CouponName}</div>
+                                                                    <div class='coupon-price'>折扣{(int)co.Discount}<span>優惠券</span></div>
+                                                                    <div class='coupon-description'>訂單限滿{co.Condition}使用</div>
+                                                                </div>
+                                                                <div class='coupon-get' type='button' onclick='getcoupon({co.CouponId})'>
+                                                                    <div class='coupon-get coupon-desc'>副券</div>
+                                                                    <div class='coupon-expiry-date'>到期日{co.ExDate}</div>
+                                                                </div>
+                                                            </div>");
 
                     }
 
@@ -110,8 +110,8 @@
                     }
                     let timerInterval
                     Swal.fire({
-                        title: 'Auto close alert!',
-                        html: 'I will close in <b></b> milliseconds.',
+                        title: '領取成功!',
+                        html: '',
                         timer: 1000,
                         timerProgressBar: true,
                         didOpen: () => {
