--- a/MIST143_Traveler/Views/Shared/Components/Coupon/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/Coupon/Default.cshtml
@@ -45,7 +45,7 @@
                                             <div class='coupon-description'>訂單限滿{co.Condition}使用</div>
                                         </div>
                                         <div class='coupon-get'>
-                                            <div class='coupon-desc'>副券</div>
+                                            <div class='coupon-get coupon-desc'>副券</div>
                                             <div class='coupon-expiry-date'>到期日{co.ExDate}</div>
                                         </div>
                                     </div>");
