--- a/MIST143_Traveler/Views/ProductListPage/ProductListHomePage.cshtml
+++ b/MIST143_Traveler/Views/ProductListPage/ProductListHomePage.cshtml
@@ -44,6 +44,7 @@
                                     </div>
                                 </div>
                             </div>
+
                         </div>
                         <div class="banner-search-box ban-sea-box">
                             <span class="bi-search"></span>
@@ -71,43 +72,43 @@
                     <div class="asdqwr">
                         <div class="card" style="width: 148px;height:117px;">
                             <div class="cardsize">
-                                <img src="../Images/ProductListPageImages/icon_all.jpg" class="cardimg-top" alt="...">
+                                <img src="../Images/ProductListPageImages/icon_all.jpg" class="cardimg-top uuuimg" alt="...">
                                 <span class="experience-menu-name">總覽</span>
                             </div>
                         </div>
                         <div class="card" style="width: 148px;height:117px;">
                             <div class="cardsize">
-                                <img src="../Images/ProductListPageImages/icon_theme_water_parks.jpg" class="cardimg-top" alt="...">
+                                <img src="../Images/ProductListPageImages/icon_theme_water_parks.jpg" class="cardimg-top uuuimg" alt="...">
                                 <span class="experience-menu-name">樂園</span>
                             </div>
                         </div>
                         <div class="card" style="width: 148px;height:117px;">
                             <div class="cardsize">
-                                <img src="../Images/ProductListPageImages/icon_camping_glamping.jpg" class="cardimg-top" alt="...">
+                                <img src="../Images/ProductListPageImages/icon_camping_glamping.jpg" class="cardimg-top uuuimg" alt="...">
                                 <span class="experience-menu-name">露營</span>
                             </div>
                         </div>
                         <div class="card" style="width: 148px;height:117px;">
                             <div class="cardsize">
-                                <img src="../Images/ProductListPageImages/icon_boat_tours_cruises_yachts.jpg" class="cardimg-top" alt="...">
+                                <img src="../Images/ProductListPageImages/icon_boat_tours_cruises_yachts.jpg" class="cardimg-top uuuimg" alt="...">
                                 <span class="experience-menu-name">觀光</span>
                             </div>
                         </div>
                         <div class="card" style="width: 148px;height:117px;">
                             <div class="cardsize">
-                                <img src="../Images/ProductListPageImages/icon_museums_exhibitions.jpg" class="cardimg-top" alt="...">
+                                <img src="../Images/ProductListPageImages/icon_museums_exhibitions.jpg" class="cardimg-top uuuimg" alt="...">
                                 <span class="experience-menu-name">藝術</span>
                             </div>
                         </div>
                         <div class="card" style="width: 148px;height:117px;">
                             <div class="cardsize">
-                                <img src="../Images/ProductListPageImages/icon_spa_massages.jpg" class="cardimg-top" alt="...">
+                                <img src="../Images/ProductListPageImages/icon_spa_massages.jpg" class="cardimg-top uuuimg" alt="...">
                                 <span class="experience-menu-name">SPA</span>
                             </div>
                         </div>
                         <div class="card" style="width: 148px;height:117px;">
                             <div class="cardsize">
-                                <img src="../Images/ProductListPageImages/icon_thrill_seeking_activities.jpg" class="cardimg-top" alt="...">
+                                <img src="../Images/ProductListPageImages/icon_thrill_seeking_activities.jpg" class="cardimg-top uuuimg" alt="...">
                                 <span class="experience-menu-name">運動</span>
                             </div>
                         </div>
@@ -656,7 +657,7 @@
                             </div>
                         </div>
                     </div>
-                    <button class="area_button" onclick="OpenModal()">選擇其他目的地</button>
+
                 </div>
             </div>
 
