--- a/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
+++ b/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
@@ -44,8 +44,8 @@
         {
             <input type="hidden" name="AccompanyPeople" value="@Model.AccompanyPeople" />
         }
-        <input type="text" name="CouponId" class="couponIdInput" value="0" />
-        <input type="text" name="CouponListId" class="couponListId" value="0" />
+        <input type="hidden" name="CouponId" class="couponIdInput" value="0" />
+        <input type="hidden" name="CouponListId" class="couponListId" value="0" />
         @for (int i = 0; i < Model._CShoppingCartDetailViewModel.Count; i++)
         {
             <input type="hidden" asp-for="_CPayViewModel[i].TravelProductId" value="@Model._CShoppingCartDetailViewModel[i].TravelProductId" />
@@ -178,8 +178,8 @@
                                     </div>*@
                                     @foreach (var item in Model._CCouponViewModel)
                                     {
-                                        <input type="text" class="couponIdValue" value="@item.CouponId" />
-                                        <input type="text" class="couponListIdValue" value="@item.CouponListId" />
+                                        <input type="hidden" class="couponIdValue" value="@item.CouponId" />
+                                        <input type="hidden" class="couponListIdValue" value="@item.CouponListId" />
                                         <div class='coupon coupon-wave-left coupon-wave-right coupon-yellow-gradient'>
                                             <div class='coupon-info coupon-info-right-dashed'>
                                                 <div class='coupon-store'>@item.CouponName</div>
