--- a/MIST143_Traveler/wwwroot/css/travelOrder.css
+++ b/MIST143_Traveler/wwwroot/css/travelOrder.css
@@ -394,11 +394,17 @@ input[type=number] {
     cursor: pointer;
 }
 
-.modal-footer{
-    justify-content:space-between !important;
+.modal-footer.spaceBetween {
+    justify-content: space-between !important;
 }
 .payUserRow .payUser.active2 {
     border: solid 1px #0045ff;
     background-color: rgb(61 137 223 / 12%);
     color: #0088e9;
+}
+.greyText {
+    color: grey;
+}
+.addlesson {
+    margin-top: -93px;
 }
